# film-recipes

./: .gitignore  Cargo.toml  README.md  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml
.claude/: launch.json
.github/workflows/: deploy.yml
apps/web/: .env.example  index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  Root.tsx  auth.ts  gl-preview.ts  index.css  main.ts  main.tsx  store.ts
apps/web/src/components/: AdjustmentsPanel.tsx  BeforeAfterToggle.tsx  ClearDataButton.tsx  ColorWheel.tsx  GoogleLoginButton.tsx  HeroScene.tsx  IconSidebar.tsx  ImportZone.tsx  RecipeSelector.tsx  SplitSlider.tsx
apps/web/src/components/mobile/: MobileTopBar.tsx  RecipeCarousel.tsx
apps/web/src/hooks/: useImageGestures.ts  useIsMobile.ts
apps/web/src/pages/: Home.tsx  Terms.tsx
apps/web/src/shaders/: preview.frag.glsl
crates/export-render/: Cargo.toml
crates/export-render/src/: lib.rs
crates/raw-decode/: Cargo.toml
crates/raw-decode/src/: lib.rs
crates/recipe-engine/: Cargo.toml
crates/recipe-engine/examples/: dump_classic_chrome_golden.rs  dump_recipe_golden.rs  dump_schema_sample.rs
crates/recipe-engine/src/: acros.rs  astia.rs  blend.rs  classic_chrome.rs  classic_neg.rs  color_chrome.rs  curves.rs  eterna.rs  lib.rs  monochrome.rs  named_recipes.rs  pipeline.rs  pro_neg.rs  recipe.rs  tone.rs  velvia.rs  white_balance.rs
crates/wasm-bridge/: Cargo.toml
crates/wasm-bridge/src/: lib.rs
docs/decisions/: raw-decoder-license.md
tests/e2e/: no-network.spec.ts
